--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
-        <p class="view"><a href="{{ site.github.linkedin_url }}">LinkedIn Profile</a></p>
+        <p class="view"><a href="{{ site.linkedin_url }}">LinkedIn Profile</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
