--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,10 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+.custom-image {
+    width: 400px;
+    height: 400px;
+    display: block;
+    margin: 0 auto;
+}
