--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 @import "{{ site.theme }}";
-img.custom-center {
+.custom-center {
   display: block;
   margin: 0 auto;
   max-width: 100%; /* Prevents overflow */
