--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,6 @@
   margin: 0 auto;
   max-width: 100%; /* Prevents overflow */
   height: auto;    /* Maintains aspect ratio */
+  max-width: 300;
 }
 
