--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@
   margin: 0 auto;
   max-width: 100%; /* Prevents overflow */
   height: auto;    /* Maintains aspect ratio */
-  max-width: 300;
+  width: 300;
+  // max-width: 300;
 }
 
