--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" class="rounded-50" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
@@ -28,9 +28,9 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.about }}">About</a></p>
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub Profile</a></p>
-        <p class="view"><a href="{{ site.linkedin_url }}">LinkedIn Profile</a></p>        
+        <p class="view"><a href="{{ site.about }}">About</a>
+        <a href="{{ site.github.owner_url }}">GitHub Profile</a>
+        <a href="{{ site.linkedin_url }}">LinkedIn Profile</a></p>        
         {% endif %}
 
         {% if site.show_downloads %}
