--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,11 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.about }}">About</a>
-        <a href="{{ site.github.owner_url }}">GitHub Profile</a>
-        <a href="{{ site.linkedin_url }}">LinkedIn Profile</a></p>        
+        <ul>
+          <li><a href="{{ site.about }}">About</a></li>
+          <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
+          <li><a href="{{ site.linkedin_url }}">LinkedIn Profile</a></li>
+        </ul>        
         {% endif %}
 
         {% if site.show_downloads %}
