--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,20 +15,20 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1 style="text-align: center;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" class="rounded-50" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" class="rounded-50 center-image" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p style="text-align: center; justify-content: center;">{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <ul>
+        <ul style="list-style-type:none">
           <li><a href="{{ site.about }}">About</a></li>
           <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           <li><a href="{{ site.linkedin_url }}">LinkedIn Profile</a></li>
