--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h1 style="text-align: center;"><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" class="rounded-50 center-image" />
+          <img src="{{site.logo | relative_url}}" alt="Logo" height="200" class="rounded-50 center-image margin-20" />
         {% endif %}
 
         <p style="text-align: center; justify-content: center;">{{ site.description | default: site.github.project_tagline }}</p>
