--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <ul style="list-style-type:none; display: inline-block">
+        <ul style="list-style-type:none; display: inline-block; list-style-position: outside;">
           <li><a href="{{ site.about }}">About</a></li>
           <li><a href="{{ site.github.owner_url }}">GitHub Profile</a></li>
           <li><a href="{{ site.linkedin_url }}">LinkedIn Profile</a></li>
