--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 
         {% if site.github.is_user_page %}
         <ul style="list-style-type:none">
-          <li><a href="{{ site.github.owner_url }}"><img src="https://i.sstatic.net/tskMh.png" alt="github"> Github</a></li>
-          <li><a href="{{ site.linkedin_url }}"><img src="https://i.sstatic.net/gVE0j.png" alt="linkedin"> LinkedIn</a></li>
+          <li><a href="{{ site.github.owner_url }}">Github</a></li>
+          <li><a href="{{ site.linkedin_url }}">LinkedIn</a></li>
         </ul>        
         {% endif %}
 
