add pages icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
         <p style="text-align: center; justify-content: center;"><a href="{{ site.github_url }}"><i class="fa fa-github fa-2x" style="padding-right: 20px;"></i></a><a href="{{ site.linkedin_url }}" class="fa fa-linkedin fa-2x"></a></p>
 
         <h3>Pages</h3>
-        <ul>
-          <li><a href="{{ site.about }}">About</a></li>
-          <li><a href="{{ site.tags_page }}">Tags</a></li>
+        <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fa fa-bookmark"></i></span><a href="{{ site.about }}">About</a></li>
+          <li><span class="fa-li"><i class="fa fa-bookmark"></i></span><a href="{{ site.tags_page }}">Tags</a></li>
         </ul>
 
 
