--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -16,15 +16,24 @@
 
 /// beautiful-jekyll theme related changes
 // Make big headersite title smaller
-.intro-header .page-heading h1 {
-  font-size: 3.8rem;
-}
-
-// Make post titles smaller
-.post-preview .post-title {
-  font-size: 2rem;
-}
-
-.intro-header .page-heading .page-subheading {
-  font-size: 1.5rem;
-}
+// .intro-header .page-heading h1 {
+//   font-size: 3rem;
+// }
+// // Make post titles smaller
+// .post-preview .post-title {
+//   font-size: 2rem;
+// }
+// .intro-header .page-heading .page-subheading {
+//   font-size: 1.5rem;
+// }
+// @media (min-width: 1200px) {
+//   .intro-header .page-heading h1 {
+//       font-size: 4.5rem;
+//   }
+//   .post-preview .post-title {
+//     font-size: 2.8rem;
+//   }
+//   .intro-header .page-heading .page-subheading {
+//     font-size: 1.8rem;
+//   }
+// }
